# ftmon

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX-SPEC-REVIEW.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PLAN-baseline-visibility.md  README.md  SPEC.md  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  exchange.yml  release.yml
design/builtins/: disk.toml  hog.toml  leak.toml  self.toml  service.toml
docs/: REVIEW-3.md  ai-skills.md  check-authoring.md  definitions.md  drift-audit-m10.md  exchange.md  external-checks.md  github-hygiene.md  install.md  manual.md  soak-procedure.md  tuning-desktop-xps15.md  tuning-procedure.md  why-ftmon.md
exchange/static/: exchange.css  exchange.js
exchange/templates/: 404.html  detail.html  index.html
extra-monitors/: README.md
extra-monitors/_template/: README.md  checks.toml.example  monitor.toml  recipe.toml
extra-monitors/check-docker/: README.md  checks.toml.example  monitor.toml  recipe.toml
extra-monitors/http-cert/: README.md  checks.toml.example  monitor.toml  recipe.toml
extra-monitors/http-tls/: README.md  checks.toml.example  monitor.toml  recipe.toml
extra-monitors/iowait/: README.md  checks.toml.example  monitor.toml  recipe.toml
extra-monitors/postgres-ready/: README.md  checks.toml.example  monitor.toml  recipe.toml
extra-monitors/root-disk/: README.md  checks.toml.example  monitor.toml  recipe.toml
extra-monitors/sensors/: README.md  checks.toml.example  monitor.toml  recipe.toml
extra-monitors/temperature/: README.md  checks.toml.example  monitor.toml  recipe.toml
ftmon-legacy/: INSTALL.txt
ftmon-legacy/base/: .CheckSNMP.pm.swp  .common.cfg.swp  .process.cfg.swp  DEPENDENCIES.txt  NT_README.txt  README.txt  help.html  index.html
ftmon-legacy/cfg/: common.cfg  event_manager.cfg  ftmon.cfg
src/ftmon/: __init__.py  __main__.py  cli.py  clock.py  config.py  daemon.py  demo.py  mcp_server.py  model.py  paths.py  selfmon.py
tests/: conftest.py  reqindex.json  traceability_pending.json
tests/ai_skills/: test_shared_skills.py
tests/e2e/: harness.py  test_daemon_e2e.py  test_demo_builder.py  test_recipe_install_e2e.py
tests/e2e_real/: __init__.py  test_real_system.py  test_server_deployment.py
tests/exchange/: test_exchange.py
tests/extra_monitors/: test_recipes.py
tests/unit/: test_actions.py  test_check_registry.py  test_cli.py  test_config_secrets.py  test_core.py  test_definitions.py  test_demo.py  test_doctor.py  test_engine.py  test_episodes.py  test_events_engine.py  test_expr_eval.py  test_expr_parse.py  test_external_checks.py  test_external_integration.py  test_external_sampler.py  test_fixtures.py  test_incidents.py  test_leak_rules.py  test_m10_release.py  test_m2_integration.py  test_mcp.py  test_notification_dispatch.py  test_notify_desktop.py  test_notify_remote.py  test_packaging.py  test_quiet.py  test_recipe_install.py  test_retention.py  test_samplers.py  test_samplers_m3.py  test_scenarios_m4.py  (+7 more)
tools/: build_exchange.py  capture_soak_evidence.sh  gen_reqindex.py  soak_report.py
(+224 files in other folders)
