[project]
name = "ftmon"
version = "2.0.0a0"
description = "FTMON v2 - lightweight local systems monitor with MCP integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Danny Sheehan" }]
dependencies = [
    "psutil>=6",
    "platformdirs>=4",
    "mcp>=1",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "tomli-w>=1",
]

[project.scripts]
ftmon = "ftmon.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-timeout>=2",
    "hypothesis>=6",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftmon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
markers = ["realsystem: opt-in tests of live Linux/systemd surfaces (excluded by default)"]
addopts = "-m 'not realsystem'"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
