[project]
name = "ftmon"
version = "2.0.0a8"
description = "FTMON v2 - lightweight local systems monitor with MCP integration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Danny Sheehan" }]
keywords = ["monitoring", "linux", "daemon", "sqlite", "incidents", "metrics", "mcp", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil>=6",
    "platformdirs>=4",
    "mcp>=1",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "tomli-w>=1",
]

[project.scripts]
ftmon = "ftmon.cli:main"

[project.urls]
Homepage = "https://github.com/dannysheehan/ftmon"
Repository = "https://github.com/dannysheehan/ftmon"
Issues = "https://github.com/dannysheehan/ftmon/issues"
Demo = "https://demo.ftmon.org/"
Documentation = "https://github.com/dannysheehan/ftmon/blob/main/docs/manual.md"
Install = "https://github.com/dannysheehan/ftmon/blob/main/docs/install.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-timeout>=2",
    "hypothesis>=6",
    "ruff>=0.8",
    "httpx2>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftmon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
markers = ["realsystem: opt-in tests of live Linux/systemd surfaces (excluded by default)"]
addopts = "-m 'not realsystem'"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
